# git-anatomy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: algorithm.md  architecture.md  usage.md
src/: main.rs
src/analyzer/: call_graph.rs  languages.rs  mod.rs
src/db/: mod.rs
src/git_engine/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
